appId: com.nicolasmartin.dankfolio
---
# -----------------
# PRICE DISPLAY SECTION
# -----------------
- assertVisible:
      id: "coin-detail-price-card-${COIN_SYMBOL}"

- assertVisible:
      id: "price-display-container"

# skip for now
# - assertVisible:
#       id: "price-display-coin-icon"

- assertVisible:
      id: "price-display-coin-name"

- assertVisible:
      id: "price-display-coin-address"

- assertVisible:
      id: "price-display-current-price"

- assertVisible:
      id: "price-display-price-change"

- assertVisible:
      id: "price-display-period"

# Test chart section
- assertVisible:
      id: "coin-detail-chart-card-${COIN_SYMBOL}"

# Test timeframe selection
- assertVisible:
      id: "coin-detail-timeframe-card"

- assertVisible:
      id: "coin-detail-timeframe-button-1H"
- assertVisible:
      id: "coin-detail-timeframe-button-4H"
- assertVisible:
      id: "coin-detail-timeframe-button-1D"
- assertVisible:
      id: "coin-detail-timeframe-button-1W"
- assertVisible:
      id: "coin-detail-timeframe-button-1M"

- tapOn:
      id: "coin-detail-timeframe-button-1H"

# -----------------
# MARKET STATS SECTION
# -----------------
- scrollUntilVisible:
      element:
          id: "market-stats-container"
      direction: DOWN
      # speed: 100
- assertVisible:
      id: "market-stats-marketcap"
- assertVisible:
      id: "market-stats-volume"
- assertVisible:
      id: "market-stats-fdv"
- assertVisible:
      id: "market-stats-liquidity"
- assertVisible:
      id: "market-stats-price-change"
- assertVisible:
      id: "market-stats-rank"

# -----------------
# ABOUT SECTION
# -----------------

- scrollUntilVisible:
      element:
          id: "coin-detail-about-card"
      direction: DOWN

- assertVisible:
      id: "coin-detail-holdings-card"

- assertVisible:
      id: "coin-detail-holdings-title"

- assertVisible:
      id: "coin-detail-about-card"

- assertVisible:
      id: "coin-detail-about-title"

- assertVisible:
      id: "coin-info-description-section"

- assertVisible:
      id: "coin-info-description-text"

- assertVisible:
      id: "coin-info-tags-section"

- assertVisible:
      id: "coin-info-links-section"

- assertVisible:
      id: "trade-button-${COIN_SYMBOL}"
